@@ -39,7 +39,9 @@
 <blockquote>
 <ul class="simple">
 <li>coders/psd.c (ReadPSDImage): Fix SourceForge bug #341
-&quot;out-of-bounds read in coders/psd.c:1435&quot;.</li>
+&quot;out-of-bounds read in coders/psd.c:1435&quot;.
+(WriteWhiteBackground): Fix SourceForge bug #350 &quot;SEGV in
+coders/psd.c:1685&quot;.</li>
 <li>coders/xcf.c (load_tile): Fix SourceForge bug #337
 &quot;heap-buffer-overflow in coders/xcf.c:373&quot;.</li>
 <li>coders/pict.c (WritePICTImage): Fix SourceForge bug #340
